--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uupaa.binarypacker0x0002.js",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "APNGFrameData pack/unpack for BinaryPacker.js",
   "url": "https://github.com/uupaa/BinaryPacker0x0002.js",
   "keywords": [
@@ -28,6 +28,7 @@
     "hint": "jshint lib/*.js",
     "score": "node ../WebModule/run/score.js; open lint/plato/index.html",
     "patch": "node ../WebModule/run/patch.js",
+    "setup": "node ../WebModule/run/setup.js",
     "start": "cd ../; Python -m SimpleHTTPServer 8000 &",
     "stop": "killall -- Python -m SimpleHTTPServer 8000; exit 0"
   },
