--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uupaa.binarypacker0x0002.js",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "APNGFrameData pack/unpack for BinaryPacker.js",
   "url": "https://github.com/uupaa/BinaryPacker0x0002.js",
   "keywords": [
@@ -44,10 +44,10 @@
       "@dev"
     ]
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "uupaa.binarypacker.js": ""
   },
+  "devDependencies": {},
   "lib": "./lib/",
   "main": "./index.js",
   "author": "uupaa",
